syntax = "proto3";

option go_package = "github.com/roderm/audio-panel/proto";

service AVRService {
    rpc GetAVRs(null) returns (stream AVR);
    rpc Power(AVR_PowerToggle) returns (AVR);
    rpc UpdateZone(ZoneUpdate) returns (ZoneUpdate);
    rpc Subscribe(AVR) returns (stream AVR);
}

message null {
}
message AVR {
    message Zone {
        message ListeningMod {
            string Code = 1;
            string Name = 2;
        }
        message Source {
            string Code = 1;
            string Name = 2;
        }
        bool State = 1;
        string Name = 2;
        int32 Volume = 3;
        bool isMain = 4;
        string CurrentSource = 5;
        bool SyncVol = 6;
        bool SyncSrc = 7;
        bool Muted = 8;
        string CurrentListeningMod = 9;
        repeated ListeningMod ListeningMods = 10;
        repeated Source Sources = 11;
    }
    int64 Id = 1;
    bool Power = 2;
    map<int32, Zone> Zones = 3;
    map<int32, string> InputSources = 4;
    string IP = 5;
}
message AVR_PowerToggle {
    string IP = 1;
    bool On = 2;
}
message ZoneUpdate {
    string AVR_IP = 1;
    string Zone_Name = 2;
    bool State = 3;
    int32 Volume = 4;
    int32 Source = 5;
    bool SyncVol = 6;
    bool SyncSrc = 7;
}